<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!--android:background="#d39441"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/lblCidadeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:text="@null"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>


        <Button
            android:id="@+id/btnFavoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="130dp"
            android:text="@string/str_favoritos" />

        <Button
            android:id="@+id/btnAliment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnFavoritos"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/str_alimentacao" />

        <Button
            android:id="@+id/btnExcursao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAliment"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/str_excursoes" />

        <Button
            android:id="@+id/btnHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnExcursao"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/str_hoteis" />

        <Button
            android:id="@+id/btnLoja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnHotel"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/str_lojas" />

    </LinearLayout>
</ScrollView>