<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewCitys"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="br.com.egcservices.portaldamoda.CidadeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="145dp"
            android:onClick="caruaru"
            app:cardCornerRadius="14dp"
            app:cardElevation="7dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgViewC"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_caruaru" />

                <TextView
                    android:id="@+id/txtCaruaru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/str_caruaru"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/card2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="19dp"
            android:onClick="toritama"
            app:cardCornerRadius="14dp"
            app:cardElevation="7dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgViewT"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_toritama" />

                <TextView
                    android:id="@+id/txtToritama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/str_toritama"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/txtInfoCidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/str_infocidade"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/card1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="19dp"
            android:onClick="santacruz"
            app:cardCornerRadius="14dp"
            app:cardElevation="7dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtSantaCruz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/str_santac"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <ImageView
                    android:id="@+id/imgViewS"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:visibility="visible"
                    app:srcCompat="@mipmap/ic_santac" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="vertical" />
    </RelativeLayout>
</ScrollView>